# ifvg-tempo-backtester

./: .gitignore  README.md  analyze_trades.py  extract_journal.py  market_metrics.py  pyproject.toml  requirements.txt  run.sh
data/: nq-front-month.ohlcv-15s.csv  nq-front-month.ohlcv-1m.csv  nq-front-month.ohlcv-2m.csv  nq-front-month.ohlcv-30s.csv  nq-front-month.ohlcv-3m.csv  nq-front-month.ohlcv-5m.csv
docs/: repo_structure.md
runs/: README.md  forensic_2026-03.txt  v002_2026-03.csv
scripts/: README.md  diagnose.py  forensic.py  run_backtest.py  run_multi_tf.py  trace_setup.py
transcriptions/: 2025-08-06_11-10-05.txt  2025-10-01_10-30-15.txt  2025-10-02_11-00-15.txt  2025-10-03_10-56-34.txt  2025-10-06_11-02-39.txt  2025-10-07_11-20-12.txt  2025-10-08_11-21-19.txt  2025-10-09_11-06-56.txt  2025-10-10_11-52-25.txt  2025-10-13_11-07-07.txt  2025-10-14_15-57-08.txt  2025-10-15_11-27-55.txt  2025-10-16_11-08-51.txt  2025-10-17_10-58-39.txt  2025-10-20_11-04-52.txt  2025-10-21_13-37-19.txt  2025-10-22_12-30-32.txt  2025-10-23_12-36-51.txt  2025-10-24_13-42-38.txt  2025-10-27_11-19-19.txt  2025-10-28_14-30-15.txt  2025-10-29_15-43-49.txt  2025-10-30_11-13-59.txt  2025-11-03_11-13-02.txt  2025-11-04_11-24-03.txt  2025-11-05_10-58-27.txt  2025-11-06_10-50-29.txt  2025-11-07_10-42-55.txt  2025-11-10_11-19-14.txt  2025-11-11_10-51-44.txt  2025-11-13_10-56-00.txt  2025-11-17_09-14-51.txt  2025-11-18_11-28-23.txt  2025-11-19_13-40-13.txt  2025-11-20_10-45-38.txt  2025-11-21_10-56-08.txt  2025-11-24_10-47-11.txt  2025-11-25_12-09-50.txt  2025-11-26_14-50-29.txt  (+45 more)
(+26 files in other folders)
